--- a/templates/itemView.html
+++ b/templates/itemView.html
@@ -12,11 +12,11 @@
                          style="width: 250px; height: auto"/>
                 </div>
                 <div layout="column" flex="100" flex-gt-sm="60" layout-align="start start">
-                    <div style="font-size: 30px; font-weight: 200; margin-top: 0px; margin-bottom: 25px">The best offer
+                    <div style="font-size: 30px; font-weight: 200; margin-top: 0; margin-bottom: 25px">The best offer
                         in:
                         {{cheapest.storeName}}
                     </div>
-                    <div style="font-size: 30px; font-weight: 400; margin-top: 0px; color: #009688">
+                    <div class="item-single-price">
                         {{cheapest.itemPrice | currency}}
                         <md-button class="md-primary md-raised" ng-click="">BUY NOW</md-button>
                     </div>
