--- a/css/main.css
+++ b/css/main.css
@@ -33,3 +33,67 @@ a:hover, a:visited, a:link, a:active {
     text-align: start;
     border-radius: 0;
 }
+
+.md-sidenav-left {
+    height: 100%;
+    min-width: 250px;
+    width: 250px;
+    padding-top: 10px;
+    margin-bottom: 8px;
+    margin-top: 0;
+}
+
+.item-card-container {
+    padding-left: 8px;
+    padding-right: 8px;
+    padding-top: 8px;
+}
+
+.md-card-item {
+    outline: none;
+    border: 0;
+    cursor: pointer;
+    overflow: visible;
+    min-width: 100%;
+    margin: 0;
+    padding-top: 15px;
+}
+
+.item-card-image-container {
+    height: 200px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.item-card-text-20 {
+    font-size: 20px;
+    font-weight: 200;
+}
+
+.teal-text {
+    color: #009688;
+}
+
+.search-input {
+    height: 75px;
+    padding-left: 50px;
+    padding-right: 50px;
+}
+
+.hamburger-menu-icon {
+    margin: 15px;
+    cursor: pointer;
+    margin-right: 0;
+    font-size: 45px;
+    color: black;
+    margin-top: 20px;
+    margin-right: 20px;
+}
+
+.item-single-price {
+    font-size: 30px;
+    font-weight: 400;
+    margin-top: 0px;
+    color: #009688;
+}
