--- a/templates/itemSearch.html
+++ b/templates/itemSearch.html
@@ -22,6 +22,10 @@
                             <md-icon>add</md-icon>
                             Add Product
                         </a>
+                        <a hide-gt-sm href="" class="md-button md-ink-ripple side-nav-element" ng-click="showAdvanced($event)">
+                            <md-icon>shopping_basket</md-icon>
+                            Cart
+                        </a>
                         <md-divider></md-divider>
                         <div ng-repeat="category in categories" style="padding: 0;">
                             <a href="/#/category/{{category}}" class="md-button md-ink-ripple side-nav-element">
