--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,11 @@ body {
 }
 
 .cart-price {
+    font-size: 35px;
+    font-weight: 300;
+}
+
+.cart-price {
     font-size: 45px;
     font-weight: 300;
 }
