--- a/templates/cartDialog.html
+++ b/templates/cartDialog.html
@@ -14,7 +14,7 @@
     <md-dialog-content style="padding: 0">
         <div class="md-dialog-content" style="padding: 0;">
             <div ng-repeat="item in cart.items track by $index">
-                <item-cart-card></item-cart-card>
+                <item-card-short></item-card-short>
             </div>
         </div>
         <div class="price teal-text" layout="row" layout-align="end center" style="padding-right: 38px; padding-top: 25px">
