--- a/templates/storeManager.html
+++ b/templates/storeManager.html
@@ -56,35 +56,33 @@
 
             <div flex="" style="width: 100%; padding-bottom: 8px">
 
-                <md-card md-theme="{{ showDarkTheme ? 'dark-orange' : 'default' }}" md-theme-watch>
-                    <md-card-title>
-                        <md-card-title-text>
-                            <span class="md-headline">{{store.name}}</span>
-                        </md-card-title-text>
-                    </md-card-title>
-                    <md-card-content layout-gt-xs="row">
-                        <div class="md-media-xl card-media" flex="40">
-                            <img ng-src="{{single.photo}}"
-                                 style="width: 250px; height: auto"/>
+                <div class="item-card-container">
+                    <md-card md-whiteframe="3" class="md-card-store" style="padding-top: 0">
+                        <div layout="row" layout-align="space-between center">
+                            <div flex="33" flex-gt-md="15" layout-align="start center" style="padding: 10px;">
+                                <div style="height: 100px; width: 100px; background-color: #B2DFDB; border-radius: 200px; font-size: 50px; font-weight: 200" layout="row"
+                                     layout-align="center center">
+                                    {{store.name | capitalizeFirst}}
+                                </div>
+                            </div>
+                            <div flex="66" flex-gt-sm="45" flex-gt-md="35" flex-gt-lg="50" layout="column"
+                                 layout-align="space-between" style="padding-left: 25px">
+                                <div flex="" class="header-sm">{{store.name}}
+                                    <p style="font-size: 15px"> {{store.country}}, {{store.city}}</p>
+                                    <p style="font-size: 15px">{{store.postalCode | postalCode}}, {{store.street}} street</p>
+                                </div>
+                                <div flex="" hide-gt-md class="cart-price teal-text">
+                                    {{store.items.length}}
+                                </div>
+                            </div>
+                            <div flex="" hide show-gt-md class="price teal-text">
+                                <div layout="column" layout-align="start end" style="padding-right: 30px">
+                                    {{store.items.length}}
+                                </div>
+                            </div>
                         </div>
-                        <div layout="column" flex="100" flex-gt-sm="60" layout-align="start start">
-                            <div style="font-size: 30px; font-weight: 200; margin-top: 0; margin-bottom: 25px">The best offer
-                                in:
-                                {{cheapest.storeName}}
-                            </div>
-                            <div class="item-single-price">
-                                {{cheapest.itemPrice | currency}}
-                                <md-button class="md-primary md-raised" ng-click="">BUY NOW</md-button>
-                            </div>
-                            <div>
-                                {{store}} <md-icon style="margin: auto; font-size: 20px">star</md-icon>, {{single.noOfReviews}} Reviews
-                            </div>
-                        </div>
-
-                    </md-card-content>
-                    <md-card-actions layout="row" layout-align="end center">
-                    </md-card-actions>
-                </md-card>
+                    </md-card>
+                </div>
             </div>
 
         </div>
