--- a/templates/login.html
+++ b/templates/login.html
@@ -4,23 +4,44 @@
         <div flex="100" flex-gt-xs="66" flex-gt-sm="50" flex-gt-md="33" layout="column" style="padding: 10px"
              md-whiteframe="10">
             <div class="price teal-text" layout="row" layout-align="center center">Sign in</div>
-            <md-input-container class="input-add-item">
-                <label>
-                    <md-icon>person</md-icon>
-                    Username</label>
-                <input ng-model="user.credentials.login" type="text">
-            </md-input-container>
+            <!--            <form>
+                            <md-input-container class="input-add-item">
+                                <label>
+                                    <md-icon>person</md-icon>
+                                    Username</label>
+                                <input id="login" ng-model="username" type="text">
+                            </md-input-container>
 
-            <md-input-container class="input-add-item">
-                <label>
-                    <md-icon>lock</md-icon>
-                    Password</label>
-                <input ng-model="user.credentials.password" type="password">
-            </md-input-container>
-            <md-button class="md-primary md-raised">
-                Sign in
-                <md-icon ng-click="sendLogin()">send</md-icon>
-            </md-button>
+                            <md-input-container class="input-add-item">
+                                <label>
+                                    <md-icon>lock</md-icon>
+                                    Password</label>
+                                <input ng-model="user.credentials.password" type="password">
+                            </md-input-container>
+                            <md-button class="md-primary md-raised">
+                                Sign in
+                                <md-icon ng-click="sendLogin()">send</md-icon>
+                            </md-button>
+                        </form>-->
+            <form>
+                <div class="form-group"
+                     ng-class="{'has-error is-focused' : authenticationError}">
+                    <input id="login" ng-model="username" type="text" class="form-control"
+                           required="required" placeholder="login"/>
+                    <span ng-show="authenticationError" class="help-block">
+            Please check your credentials and try again.
+        </span>
+                </div>
+
+                <div class="form-group">
+                    <input id="password" ng-model="password" type="password" class="form-control"
+                           required="required" placeholder="password"/>
+                </div>
+
+                <input type="checkbox" ng-model="rememberMe"/><span> Remember me</span>
+
+                <button ng-click="login()">Login</button>
+            </form>
         </div>
     </div>
 </div>
