added and modified directive for itemStoreManager

--- a/templates/storeManagerItems.html
+++ b/templates/storeManagerItems.html
@@ -56,7 +56,7 @@
 
             <div flex="" style="width: 100%; padding-bottom: 8px">
                 <div ng-repeat="item in store.items">
-                    <item-card></item-card>
+                    <item-card-manager></item-card-manager>
                 </div>
             </div>
 
