--- a/templates/directives/itemCardStorageStatus.html
+++ b/templates/directives/itemCardStorageStatus.html
@@ -18,9 +18,11 @@
                         {{item.price | currency}}
                     </div>
                 </div>
-                <div flex="" hide show-gt-md class="price teal-text">
+                <div flex="" hide show-gt-md class="no-in-store">
                     <div layout="column" layout-align="start end" style="padding-right: 30px">
-                        <div ng-class="{'storage-red': (item.noInStock < 10), 'storage-yellow': (item.noInStock >= 10 && item.noInStock < 30), 'storage-green': (item.noInStock >= 30)}" style="height: 75px; width: 75px; border-radius: 75px"></div>
+                        <div layout="row" layout-align="center center" ng-class="{'storage-red': (item.noInStock < 10), 'storage-yellow': (item.noInStock >= 10 && item.noInStock < 30), 'storage-green': (item.noInStock >= 30)}" style="height: 75px; width: 75px; border-radius: 75px">
+                            <div>{{item.noInStock}}</div>
+                        </div>
                     </div>
                 </div>
             </div>
