working sending cart object

--- a/templates/cartDialog.html
+++ b/templates/cartDialog.html
@@ -28,7 +28,7 @@
         <md-button class="md-raised">
             Continue shopping <md-icon>shopping_cart</md-icon>
         </md-button>
-        <md-button ng-click="answer('not useful')" class="md-raised">
+        <md-button ng-click="sendCart()" class="md-raised">
             To checkout <md-icon>check</md-icon>
         </md-button>
     </md-dialog-actions>
