--- a/templates/directives/orderDirective.html
+++ b/templates/directives/orderDirective.html
@@ -1,27 +1,33 @@
 <div class="item-card-container">
-    <md-card class="md-card-item">
+    <md-card class="md-card-item" style="padding-top: 0">
         <div layout="column">
-            <div layout="row" layout-align="space-around center">
-                <div>
-                    ORDER
-                    {{order.date | date}}
+            <div style="padding: 25px;">
+                <div layout-gt-xs="row" layout="column" layout-align-gt-xs="space-between center" style="padding-bottom: 10px">
+                    <div style="font-size: 30px; font-weight: 300">
+                        {{order.date | date : 'dd/MM/yyyy HH:mm:ss'}}
+                    </div>
+                    <div class="price teal-text" style="padding-bottom: 0">
+                        {{order.price | currency}}
+                    </div>
                 </div>
-                <div>
-                    {{order.price | currency}}
-                </div>
-            </div>
 
-            <div layout="row" layout-align="space-around center">
-                <div>
-                    {{order.storeName}}
-                </div>
-                <div>
-                    {{order.items.length}} items
+                <div layout="column" layout-gt-xs="row" layout-align-gt-xs="space-between center">
+                    <div flex-order="2" flex-order-gt-xs="0">
+                        <div style="font-size: 25px; font-weight: 200">
+                            Made by: {{order.username}}
+                        </div>
+                        <div style="padding-top: 10px">
+                            Order no: {{order.id}}
+                        </div>
+                    </div>
+                    <div style="font-size: 25px; font-weight: 200">
+                        {{order.items.length}} items
+                    </div>
                 </div>
             </div>
 
             <div ng-repeat="item in order.items">
-                <item-card-short></item-card-short>
+                <item-order></item-order>
             </div>
         </div>
     </md-card>
