--- a/templates/storeManagerOrders.html
+++ b/templates/storeManagerOrders.html
@@ -38,7 +38,7 @@
                         </a>
                         <a href="/#/store/manager/{{store.name}}/items/storage" class="md-button md-ink-ripple side-nav-element" ng-click="">
                             <md-icon>store_mall_directory</md-icon>
-                            Storehouse
+                            Storage
                         </a>
                         <a href="/#/storage/manager/{{store.name}}/orders" class="md-button md-ink-ripple side-nav-element" ng-click="">
                             <md-icon>assignment</md-icon>
