changed offers in itemView

--- a/templates/directives/itemOrder.html
+++ b/templates/directives/itemOrder.html
@@ -9,7 +9,8 @@
         </div>
         <div flex="66" flex-gt-sm="45" flex-gt-md="35" flex-gt-lg="50" layout="column"
              layout-align="space-between" style="padding-left: 25px">
-            <div flex="" class="item-order-name">{{item.name}}
+            <div flex="" class="item-order-name">
+                {{item.name}}
             </div>
             <div flex="" hide-gt-md class="order-price-sm teal-text">
                 {{item.price | currency}}
