--- a/templates/directives/itemCardStorageStatus.html
+++ b/templates/directives/itemCardStorageStatus.html
@@ -13,11 +13,14 @@
         </div>
         <div flex="" class="no-in-store">
             <div layout="column" layout-align="start end" style="padding-right: 30px">
-                <div layout="row" layout-align="center center"
+<!--                <div layout="row" layout-align="center center"
                      ng-class="{'storage-red': (item.noInStock < 10), 'storage-yellow': (item.noInStock >= 10 && item.noInStock < 30), 'storage-green': (item.noInStock >= 30)}"
                      style="height: 75px; width: 75px; border-radius: 75px">
                     <div>{{item.noInStock}}</div>
-                </div>
+                </div>-->
+                <md-button class="md-fab" ng-class="{'storage-red': (item.noInStock < 10), 'storage-yellow': (item.noInStock >= 10 && item.noInStock < 30), 'storage-green': (item.noInStock >= 30)}">
+                    {{item.noInStock}}
+                </md-button>
             </div>
         </div>
     </div>
