--- a/templates/directives/itemCardStorageStatus.html
+++ b/templates/directives/itemCardStorageStatus.html
@@ -18,7 +18,7 @@
                      style="height: 75px; width: 75px; border-radius: 75px">
                     <div>{{item.noInStock}}</div>
                 </div>-->
-                <md-button class="md-fab" ng-class="{'storage-red': (item.noInStock < 10), 'storage-yellow': (item.noInStock >= 10 && item.noInStock < 30), 'storage-green': (item.noInStock >= 30)}">
+                <md-button ng-click="showPromptChangeAmount($event, item)" class="md-fab" ng-class="{'storage-red': (item.noInStock < 10), 'storage-yellow': (item.noInStock >= 10 && item.noInStock < 30), 'storage-green': (item.noInStock >= 30)}">
                     {{item.noInStock}}
                 </md-button>
             </div>
