fixed links in sidenav

--- a/templates/storeManager.html
+++ b/templates/storeManager.html
@@ -40,7 +40,7 @@
                             <md-icon>store_mall_directory</md-icon>
                             Storage
                         </a>
-                        <a href="/#/storage/manager/{{store.name}}/orders" class="md-button md-ink-ripple side-nav-element" ng-click="">
+                        <a href="/#/store/manager/{{store.name}}/orders" class="md-button md-ink-ripple side-nav-element" ng-click="">
                             <md-icon>assignment</md-icon>
                             Orders
                         </a>
