--- a/templates/itemSearch.html
+++ b/templates/itemSearch.html
@@ -18,6 +18,10 @@
                             <md-icon>home</md-icon>
                             Home page
                         </a>
+                        <a href="/#/store/manager/Apple" class="md-button md-ink-ripple side-nav-element">
+                            <md-icon>store_mall_directory</md-icon>
+                            Store manager
+                        </a>
                         <a href="/#/addItem" class="md-button md-ink-ripple side-nav-element">
                             <md-icon>add</md-icon>
                             Add Product
