added edit item feature

--- a/templates/directives/itemCardManager.html
+++ b/templates/directives/itemCardManager.html
@@ -35,7 +35,7 @@
                                 </md-fab-trigger>
 
                                 <md-fab-actions>
-                                    <md-button aria-label="Twitter" class="md-fab md-raised md-mini">
+                                    <md-button ng-click="testMsg(item, $index)" aria-label="Twitter" class="md-fab md-raised md-mini">
                                         <md-icon>mode_edit</md-icon>
                                     </md-button>
                                     <md-button aria-label="Facebook" class="md-fab md-raised md-mini">
