--- a/templates/directives/itemCardManager.html
+++ b/templates/directives/itemCardManager.html
@@ -1,8 +1,7 @@
 <a ng-href="">
     <div class="item-card-container">
         <md-card ng-click="consoletest2()"
-                 md-whiteframe="{{height}}" ng-init="height = 3" ng-mouseenter="height = 12"
-                 ng-mouseleave="height = 3" class="md-card-item">
+                 md-whiteframe="{{height}}" ng-init="height = 3" class="md-card-item">
             <div layout="row">
                 <div flex="33" flex-gt-md="25" layout-align="center center" style="padding: 20px;">
                     <div ng-style="{'background-image':'url({{item.photo}})'}" class="item-card-image-container">
@@ -15,7 +14,7 @@
                     <div flex="">
                         <span class="item-card-text-20">{{item.avgRating}}</span>
                         <md-icon style="margin: auto; font-size: 20px">star</md-icon>
-                        <span class="item-card-text-20">{{item.noOfReviews}} Reviews</span>
+                        <div class="item-card-text-20">{{item.noOfReviews}} Reviews</div>
                     </div>
                     <div flex="" hide show-gt-md>Category: {{item.category}}</div>
                     <div flex="" hide-gt-md class="price teal-text">
@@ -26,7 +25,7 @@
                 <div flex="" class="price teal-text">
                     <div layout="column" layout-align="start end" style="padding-right: 30px">
                         <div layout="row" layout-align="center center">
-                            <md-fab-speed-dial md-open="demo.isOpen" md-direction="down"
+                            <md-fab-speed-dial md-open="true" md-direction="down"
                                                class="md-fling">
                                 <md-fab-trigger>
                                     <md-button aria-label="menu" class="md-fab md-primary">
