--- a/templates/itemView.html
+++ b/templates/itemView.html
@@ -61,7 +61,7 @@
                     <div>
                         {{single.avgRating}}
                         <md-icon style="margin: auto; font-size: 20px">star</md-icon>
-                        , {{single.noOfReviews}} Reviews
+                         {{single.noOfReviews}} Reviews
                     </div>
                 </div>
 
