fixed opening fab-speed-dial issue

--- a/templates/directives/itemCardManager.html
+++ b/templates/directives/itemCardManager.html
@@ -24,8 +24,8 @@
                 </div>
                 <div flex="" class="price teal-text">
                     <div layout="column" layout-align="start end" style="padding-right: 30px">
-                        <div layout="row" layout-align="center center">
-                            <md-fab-speed-dial md-open="true" md-direction="down"
+                        <div ng-cloak layout="row" layout-align="center center">
+                            <md-fab-speed-dial md-direction="down"
                                                class="md-fling">
                                 <md-fab-trigger>
                                     <md-button aria-label="menu" class="md-fab md-primary">
